syntax = "proto3";

package calculatorpb;
option go_package="calculatorpb";

message Numbers {
    int32 first_number = 1;
    int32 last_number = 2;
}

message SumRequest {
    Numbers numbers = 1;
}

message SumResponse {
    int32 result = 1;
}

message NumberDecompositionRequest {
    Numbers numbers = 1;
}

message NumberDecompositionResponse {
    int32 result = 1;
}

message ComputeAverageRequest {
    int32 number = 1;
}

message ComputeAverageResponse {
    double result = 1;
}

message FindMaxNumberRequest {
    int32 number = 1;
}

message FindMaxNumberResponse {
    int32 result = 1;
}


service CalculatorService{
    // Unary
    rpc Sum(SumRequest) returns (SumResponse) {};

    // Server streaming
    rpc DecomposeNumber(NumberDecompositionRequest) returns (stream NumberDecompositionResponse) {};

    // Client Streaming
    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {};

    // Bi Directional Streaming
    rpc FindMaxNumber(stream FindMaxNumberRequest) returns (stream FindMaxNumberResponse) {};
}